feature/configure-to-pgsql-and-railway-deploy

--- a/.gitignore
+++ b/.gitignore
@@ -86,9 +86,10 @@ yarn-error.log
 .sass-cache/
 
 # Environment files (if they contain secrets)
-# .env
-# .env.local
-# .env.*.local
+.env
+.env.local
+.env.*.local
+*.env
 
 # Testing
 /coverage
@@ -151,3 +152,8 @@ $RECYCLE.BIN/
 
 # Linux
 *~
+
+# ==================================
+# Configuration Files with Secrets
+# ==================================
+appsettings.Development.json
